# SPLN-24-25

./: README.md
TPC 1/: README.md  remove_equal_lines.py  result  teste.txt
TPC 2/: README.md  rm_lines2.py  spaces_and_com_filter.py
TPC 3/ftk/: pyproject.toml
TPC 7/: tpc7.ipynb
