[project]
name = "ftk"
version = "0.1.0"
authors = [{name = "Gonçalo Costa", email = "goncalodaniel28@gmail.com"}]
description = "Caclulate the frequency of words in a text file"
dependencies = ["jjcli"]
license = { text = "MIT" }

[project.scripts]
ftk-occ = "ftk.base:main"
ftk-freq = "ftk.freq:main"
